# vrc-stocking-generator-manual

./: mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: index.ja.md  index.md  index.zh-Hans.md
docs/js/: language-redirect.js
