[project]
name = "vrc-stocking-generator-manual"
version = "0.1.0"
description = ""
authors = [
    {name = "ranhai613",email = "hulanhai613@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "mkdocs-static-i18n (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false